docker-kubernetes-security-practice-guide-1.0.0/chapter6/6.4.1/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-example
spec:
  tls:
  - hosts:
    - secure.example.com
    secretName: tls-example
  rules:
    - host: secure.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: my-service
            servicePort: 80
